# plick

./: Cargo.toml  README.md  cargo-sources.json  install.sh  plick.flatpak
data/: com.github.plick.desktop  com.github.plick.metainfo.xml
repo/: summary  summary.idx
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/summaries/: 05807172047a5a5adb7d7c0c3ebf6170fd0025c2fc4344267d34cd78bf330f8a-4e9e246c55da9ebb300c236156895e126d8557bae47ba1e4ba7390d790a1e207.delta  234d08bb9b91e199ee8982dacc766cd334689343cddf14c34ab402e4873183f4-4e9e246c55da9ebb300c236156895e126d8557bae47ba1e4ba7390d790a1e207.delta  704fc4c60c694910d39ae65f28880682f4f79b1457865ff3d4fe69f735399a27-225ca512b8496fa1823e26e2fcd380709a545e5aac67838bac38a72b765e08b2.delta  96eee1573be25231ad5ca282278e04f1e0890f3ccd2acab807841bae7a63c9d1-4e9e246c55da9ebb300c236156895e126d8557bae47ba1e4ba7390d790a1e207.delta  bda37e7a43720ae4f2919e0a89ae48eb8363693bdabfbd9eca959576610ac83f-225ca512b8496fa1823e26e2fcd380709a545e5aac67838bac38a72b765e08b2.delta  df4efea15dabddc3e253b28f56a96d45ae5a2ae29769d2916f14ea17323d52f5-225ca512b8496fa1823e26e2fcd380709a545e5aac67838bac38a72b765e08b2.delta  df4efea15dabddc3e253b28f56a96d45ae5a2ae29769d2916f14ea17323d52f5-4e9e246c55da9ebb300c236156895e126d8557bae47ba1e4ba7390d790a1e207.delta  df4efea15dabddc3e253b28f56a96d45ae5a2ae29769d2916f14ea17323d52f5-bda37e7a43720ae4f2919e0a89ae48eb8363693bdabfbd9eca959576610ac83f.delta  (+3 more)
src/: app.rs  config.rs  converter.rs  main.rs  recorder.rs  shortcuts.rs  tray.rs  types.rs
(+2 files in other folders)
