[package]
name = "plick"
version = "0.1.0"
edition = "2021"
description = "A minimal Peek-like GIF screen recorder for Wayland"
license = "MIT"

[dependencies]
gtk4 = "0.9"
libadwaita = "0.7"
ashpd = { version = "0.10", features = ["gtk4"] }
anyhow = "1"
tempfile = "3"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
libc = "0.2"
zbus = { version = "5.14", default-features = false, features = ["tokio"] }

[dev-dependencies]
assert_cmd = "2"
serde_json = "1"
